# setup_python

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  PEP8_GUIDE.md  README.md  SETUP_GUIDE.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
src/: __init__.py  calculadora.py
tests/: test_calculadora.py
